2015/05/27

When i really turn to PM kernel, i find there are many difficults
before coding PM. I should have planned what to do first, the task?
the filesystem?...

I have to say now we have all the resources and freedom to do everything
we want. Now we have 32-bit CPU, boot_params, and so on.

Maybe we can start by traps and interrupts, like keyboard and timer. After that
we can build task and filesystem?


2015/06/16

From Intel SDM:
The only difference between an interrupt gate and a trap gate is
the way the processor handles the IF flag in the EFLAGS register.
When accessing an exception- or interrupt-handling procedure through
an interrupt gate, the processor clears the IF flag to prevent other
interrupts from interfering with the current interrupt handler.
A subsequent IRET instruction restores the IF flag to its value in
the saved contents of the EFLAGS register on the stack. Accessing
a handler procedure through a trap gate does not affect the IF flag.

head.S: Page enabled, gdt_table and idt_table reloaded.

And, pay attention to pa() which translate VA to PA. In the future,
we may change the base address of kernel to 0xC0000000, so, remember to
fix macro pa().