@@ -3,6 +3,10 @@ ENTRY(startup_32)
 
 SECTIONS
 {
+	/* Notice: We set virtual address start
+	   from 0x10000, because the segment offset
+	   is 0x10000. In the future, the start address
+	   should plus PAGE_OFFSET */
 	. = 0x10000;
 	.text	: { *(.text) }
 	__end_text = .;
